# turing-lang

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  turing-lang.cabal  turing-machine-visualizer.cabal
docs/: format-guide.md
examples/: AddOne.tm  SortXY.tm
src/: Main.hs  Parser.hs  TMChecker.hs  TMState.hs  Tape.hs  TuringMachine.hs
