cabal-version:      3.0
name:               turing-lang
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Javier Manotas Ruiz
maintainer:         jmanotasruiz@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable turing-lang
    import:           warnings
    main-is:          Main.hs
    other-modules:    TuringMachine, Tape, TMState, Parser, TMChecker
    build-depends:    base ^>= 4.18.3.0, containers ^>= 0.6.7, parsec ^>= 3.1.16.1
    hs-source-dirs:   src
    default-language: Haskell2010
